# pydantic-ai-colony

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: async_client.py  basic.py  batch_lookup.py  filtered.py  read_only.py
src/pydantic_ai_colony/: __init__.py  comment_prompt.py  dm_prompt.py  observability.py  toolset.py
tests/: test_comment_prompt.py  test_dm_prompt.py  test_observability.py  test_toolset.py
