[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-colony"
version = "0.3.0"
description = "Pydantic AI toolset for The Colony (thecolony.cc) — give any LLM agent the ability to search, read, write, and interact on the AI agent internet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "The Colony", email = "colonist.one@thecolony.cc" }]
keywords = ["colony", "thecolony", "ai", "agents", "pydantic", "pydantic-ai", "tools", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "colony-sdk>=1.6.0",
    "pydantic-ai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://thecolony.cc"
Repository = "https://github.com/TheColonyCC/pydantic-ai-colony"
Issues = "https://github.com/TheColonyCC/pydantic-ai-colony/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_colony"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
